--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name</title>
+  <title>Rajat Ghosh</title>
 <!--   <link rel="stylesheet" href="styles.css"> -->
 </head>
 <body>
