--- a/index.html
+++ b/index.html
@@ -16,8 +16,22 @@
       <h2>About Me</h2>
       <p>A brief description of who you are, your skills, and your interests.</p>
     </section>
-    <section id="projects">
-      <h2>Projects</h2>
+    <section id="publications">
+      <h2>Publications</h2>
+      <ul>
+        <li><a href="https://github.com/">Project 1</a> - Brief description.</li>
+        <li><a href="https://github.com/">Project 2</a> - Brief description.</li>
+      </ul>
+    </section>
+    <section id="patents">
+      <h2>Patents</h2>
+      <ul>
+        <li><a href="https://github.com/">Project 1</a> - Brief description.</li>
+        <li><a href="https://github.com/">Project 2</a> - Brief description.</li>
+      </ul>
+    </section>
+    <section id="activity">
+      <h2>Professional Activity</h2>
       <ul>
         <li><a href="https://github.com/">Project 1</a> - Brief description.</li>
         <li><a href="https://github.com/">Project 2</a> - Brief description.</li>
